# paper_nmi

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/conservative_arch/parf/: causal_probe_multixi.py  model_fock_parf.py  model_fock_parf_multixi.py  model_fock_parf_v2.py  model_parf.py  model_parf_multixi.py  model_parf_sparse.py
notebooks/conservative_arch/scaleup/: colab_fock_multixi_h128.ipynb  train_fock_multixi_scaleup.py
